Refactor DataRegionTable to handle tricky characters better